--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "homepage": "https://github.com/cairocampos/video-maker#readme",
   "devDependencies": {
     "@types/node": "^18.14.1",
+    "@types/readline-sync": "^1.4.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
