--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "devDependencies": {
     "@types/node": "^18.14.1",
     "@types/readline-sync": "^1.4.4",
+    "@types/sbd": "^1.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "sbd": "^1.0.19"
   }
 }
