--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "ibm-watson": "^7.1.2",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.19"
   }
