--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "googleapis": "^112.0.0",
     "ibm-watson": "^7.1.2",
+    "image-downloader": "^4.3.0",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.19"
   }
