--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
   },
   "homepage": "https://github.com/cairocampos/video-maker#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/gm": "^1.25.0",
-    "@types/node": "^18.14.1",
+    "@types/node": "^18.14.4",
     "@types/readline-sync": "^1.4.4",
     "@types/sbd": "^1.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "gm": "^1.25.0",
     "googleapis": "^112.0.0",
     "ibm-watson": "^7.1.2",
